fix: scrollbar styling

--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,29 @@
-@import url("https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;600;700&display=swap");
+/* 
 
-html,
-body {
-  /* font-family: "Source Sans 3", sans-serif; */
-}
+::-webkit-scrollbar {
+  display: none !important;
+  -ms-overflow-style: none !important; 
+  scrollbar-width: none !important; 
+} 
+*/
 
 /* Scrollbar */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 7px;
 }
 
 /* Scrollbar Track */
 ::-webkit-scrollbar-track {
-  background-color: #e0e0e0;
+  background-color: #151632;
 }
 
 /* Scrollbar Handle */
 ::-webkit-scrollbar-thumb {
-  background-color: #888;
+  border-radius: 8px;
+  background-color: #2a2d64;
 }
 
 /* Scrollbar Handle on Hover */
-::-webkit-scrollbar-thumb:hover {
+/* ::-webkit-scrollbar-thumb:hover {
   background-color: #555;
-}
+} */
